# grpocredit

./: .env.example  .gitignore  CLAUDE.md  README.md  SERVER2_RUNBOOK.md  SERVER2_RUNBOOK_paired_runs.md  experiment_report_0427.md  experiment_report_0504.md  grpocredit-server2-pip-freeze.txt  pyproject.toml
.claude/: settings.json  settings.local.json.example
configs/: base_deepseekmath_sft.yaml  base_qwen_math.yaml
configs/baselines/: grpo.yaml  random_cascade.yaml  vineppo.yaml
configs/oracle/: deepseek_math_sft.yaml  deepseek_math_sft_gsm8k.yaml  qwen_math_instruct.yaml  rho1b_sft_gsm8k.yaml
configs/proposed/: voi_full.yaml  voi_full_cusum.yaml  voi_stage1.yaml
experiments/oracle/qwen_math_instruct_saturation_ceiling/: day1_verifier_accuracy.txt
experiments/oracle/rho1b_sft_gsm8k/: GATE_REPORT.md  boundary_annotated_responses.txt  oracle_kappa.txt
scripts/: _shared.py  inspect_day1_rollouts.py  run_oracle.sh  run_oracle_on_grpo_iter.sh  run_sprint.sh  sanity_check_server2.sh  sprint_d1_infra_smoke.py  sprint_d2_concordance.py  sprint_d2_oracle.py  sprint_d3_gate_report.py
src/grpocredit/: __init__.py  cli.py  draft.md
src/grpocredit/advantage/: __init__.py  segment_gae.py  shrinkage.py
src/grpocredit/common/: __init__.py  config.py  logging.py  types.py  utils.py
src/grpocredit/oracle/: __init__.py  concordance_check.py  group_variance.py  kappa_estimator.py  position_curve.py  q_variance_oracle.py  (+2 more)
tests/: conftest.py  test_boundary.py  test_config.py  test_group_variance.py  test_kappa.py  test_position_curve.py  test_prompt_templates.py  test_rollout_diversity.py  test_segment_gae.py  test_shrinkage.py  test_stage0.py  test_stage1.py  test_stage2_clustering.py  test_stop_gate.py  test_utils.py  test_verifier.py  test_vllm_runner_seed_contract.py
(+12 files in other folders)
