[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpocredit"
version = "0.0.1"
description = "VoI-allocated credit assignment for GRPO on single-turn reasoning."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lindley Young", email = "lindleyyoung@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.29",
    "datasets>=2.18",
    "sentence-transformers>=2.7",
    "math-verify>=0.5.2",
    "sympy>=1.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "wandb>=0.17",
    "tqdm>=4.66",
    "typer>=0.12",
    "rich>=13.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.5.0",
]
nli = [
    "transformers[sentencepiece]",
]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "ipython>=8.22",
]

[project.scripts]
grpocredit-d1 = "grpocredit.cli:d1_smoke"
grpocredit-d2-oracle = "grpocredit.cli:d2_oracle"
grpocredit-d2-concordance = "grpocredit.cli:d2_concordance"
grpocredit-d3-gate = "grpocredit.cli:d3_gate"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["grpocredit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests that require a GPU",
]
